All_Component_DX/force-app/main/default/objects/SM_Batch_Lot__c/SM_Batch_Lot__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object will be used for tracking batched/lot products.</description>
    <label>Batch/Lot</label>
    <nameField>
        <label>Batch/Lot Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch/Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>