All_Component_DX/force-app/main/default/objects/SM_Batch_Lot__c/fields/SM_Active__c.field-meta.xml
<CustomField>
    <fullName>SM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox to indicate that the lot is active and can be included in inventory transactions.</description>
    <inlineHelpText>Select this checkbox to indicate that the lot is active and can be included in inventory transactions.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>