All_Component_DX/force-app/main/default/objects/SM_Batch_Lot__c/fields/SM_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Expiry_Date__c</fullName>
    <description>Expiration date of the batch or lot provided by the manufacturer.</description>
    <inlineHelpText>Expiration date of the batch or lot provided by the manufacturer.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>