All_Component_DX/force-app/main/default/objects/SM_Batch_Lot__c/fields/SM_Product__c.field-meta.xml
<CustomField>
    <fullName>SM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the product record whose batch is being tracked.</description>
    <inlineHelpText>Link to the product record whose batch is being tracked.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Batch/Lots</relationshipLabel>
    <relationshipName>Batch_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>