All_Component_DX/force-app/main/default/objects/SM_Batch_Lot__c/fields/SM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SM_Quantity__c</fullName>
    <description>This field is used to record number of units of the product in the batch/lot.</description>
    <inlineHelpText>This field is used to record number of units of the product in the batch/lot.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>